force-app/main/default/objects/claim__c/fields/leave__c.field-meta.xml
<CustomField>
    <fullName>leave__c</fullName>
    <label>leave</label>
    <length>200</length>
    <type>Text</type>
</CustomField>