force-app/main/default/objects/claim__c/fields/Performance_percentage__c.field-meta.xml
<CustomField>
    <fullName>Performance_percentage__c</fullName>
    <label>Performance percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>