force-app/main/default/objects/claim__c/fields/Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rating__c</fullName>
    <formula>IF(Performance_percentage__c  &gt;= 90,&quot;excellent&quot;, IF(Performance_percentage__c  &gt;= 75,&quot;Good&quot;, IF(Performance_percentage__c  &gt;= 60,&quot;Average&quot;, &quot;Improvement&quot;) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>performance rating</label>
    <type>Text</type>
</CustomField>